Add back button to avaliacao-desempenho.html
Added a back button to the performance evaluation page.

--- a/avaliacao-desempenho.html
+++ b/avaliacao-desempenho.html
@@ -60,6 +60,8 @@
     <div id="app"></div>
     
     <script>
+        <!-- Em cada ferramenta, adiciona um botão voltar -->
+<a href="index.html" class="btn">🏠 Voltar ao Dashboard</a>
 // ========== BIBLIOTECA DE CONHECIMENTO ==========
 const BIBLIOTECA = {
     kpis: {
