--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 mb-12">
                 
                 <!-- Ferramenta 1: Avaliação de Desempenho -->
-                <a href="sistema-completo-final.html" class="card-tool bg-white rounded-2xl shadow-xl overflow-hidden">
+                <a href="avaliacao-desempenho.html" class="card-tool bg-white rounded-2xl shadow-xl overflow-hidden">
                     <div class="bg-gradient-to-br from-blue-500 to-blue-600 p-8 text-white">
                         <div class="text-6xl mb-4">👥</div>
                         <h3 class="text-2xl font-bold mb-2">Leadership Academy</h3>
