--- a/avaliacao-desempenho.html
+++ b/avaliacao-desempenho.html
@@ -57,6 +57,11 @@
     </style>
 </head>
 <body class="bg-gray-50">
+    <header class="flex items-center justify-between p-4 bg-white shadow-sm">
+    <a href="index.html" class="btn btn-primary">
+        ⬅️ Voltar ao Dashboard
+    </a>
+</header>
     <div id="app"></div>
     
     <script>
