--- a/financeiro-corrigido.html
+++ b/financeiro-corrigido.html
@@ -7,16 +7,25 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
-        :root {
-            --cor-laranja: #D97B3A;
-            --cor-escuro: #8B5A3C;
-            --cor-verde: #10B981;
-            --cor-vermelho: #EF4444;
-        }
-        .bg-cm-laranja { background-color: var(--cor-laranja); }
-        .bg-cm-escuro { background-color: var(--cor-escuro); }
-        .text-cm-laranja { color: var(--cor-laranja); }
-        .text-cm-escuro { color: var(--cor-escuro); }
+       :root {
+    --cm-laranja: #FF9944;
+    --cm-laranja-escuro: #D97B3A;
+    --cm-verde-escuro: #2C5F4F;
+    --cm-verde-claro: #3D8B73;
+    --cm-bege: #F5E6D3;
+    --cm-cinza-claro: #F8F9FA;
+    --cor-verde: #10B981;
+    --cor-vermelho: #EF4444;
+    --cor-azul: #3B82F6;
+}
+
+.bg-cm-laranja { background-color: var(--cm-laranja); }
+.bg-cm-escuro { background-color: var(--cm-verde-escuro); }
+.bg-cm-bege { background-color: var(--cm-bege); }
+.text-cm-laranja { color: var(--cm-laranja); }
+.text-cm-escuro { color: var(--cm-verde-escuro); }
+.border-cm-laranja { border-color: var(--cm-laranja); }
+.border-cm-escuro { border-color: var(--cm-verde-escuro); }
         
         .card-hover {
             transition: all 0.3s ease;
