--- a/financeiro-corrigido.html
+++ b/financeiro-corrigido.html
@@ -5,31 +5,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>C&M Financial Pro - Gestão Financeira Inteligente</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <style>
-        :root {
-            --cm-laranja: #FF9944;
-            --cm-laranja-escuro: #D97B3A;
-            --cm-verde-escuro: #2C5F4F;
-            --cm-verde-claro: #3D8B73;
-            --cm-bege: #F5E6D3;
-        }
-        .bg-cm-laranja { background-color: var(--cm-laranja); }
-        .bg-cm-laranja-escuro { background-color: var(--cm-laranja-escuro); }
-        .bg-cm-escuro, .bg-cm-verde-escuro { background-color: var(--cm-verde-escuro); }
-        .bg-cm-verde-claro { background-color: var(--cm-verde-claro); }
-        .bg-cm-bege { background-color: var(--cm-bege); }
-        .text-cm-laranja { color: var(--cm-laranja); }
-        .text-cm-laranja-escuro { color: var(--cm-laranja-escuro); }
-        .text-cm-verde-escuro, .text-cm-escuro { color: var(--cm-verde-escuro); }
-        .border-cm-laranja { border-color: var(--cm-laranja); }
-        .border-cm-escuro { border-color: var(--cm-verde-escuro); }
-        .receita { border-left: 4px solid #10B981; }
-        .despesa { border-left: 4px solid #EF4444; }
-        .investimento { border-left: 4px solid var(--cm-laranja); }
-        .modal { display: none; position: fixed; z-index: 50; left: 0; top: 0; width: 100%; height: 100%; background-color: rgba(0,0,0,0.5); overflow-y: auto; }
-        .modal.active { display: flex; align-items: center; justify-content: center; padding: 20px; }
-        .modal-content { background: white; border-radius: 12px; max-width: 600px; width: 100%; max-height: 90vh; overflow-y: auto; }
-    </style>
+<style>
+    :root {
+        /* 🎯 Azul base (foco/clareza) */
+        --cm-azul-principal: #2563EB;
+        --cm-azul-claro: #E8F0FE;
+        --cm-azul-muito-claro: #F4F8FF;
+
+        /* 🔥 Laranja ação */
+        --cm-laranja: #FF9944;
+        --cm-laranja-escuro: #D97B3A;
+
+        /* 🌱 Verde progresso */
+        --cm-verde: #22C55E;
+        --cm-verde-claro: #ECFDF5;
+
+        /* 🖤 Texto */
+        --cm-texto-escuro: #1F2933;
+    }
+
+    /* Backgrounds principais */
+    .bg-cm-laranja { background-color: var(--cm-laranja); }
+    .bg-cm-laranja-escuro { background-color: var(--cm-laranja-escuro); }
+
+    .bg-cm-escuro,
+    .bg-cm-azul { background-color: var(--cm-azul-principal); }
+
+    .bg-cm-azul-claro { background-color: var(--cm-azul-claro); }
+    .bg-cm-azul-muito-claro { background-color: var(--cm-azul-muito-claro); }
+
+    .bg-cm-verde { background-color: var(--cm-verde); }
+    .bg-cm-verde-claro { background-color: var(--cm-verde-claro); }
+
+    /* Textos */
+    .text-cm-laranja { color: var(--cm-laranja); }
+    .text-cm-escuro { color: var(--cm-texto-escuro); }
+    .text-cm-azul { color:
+
 </head>
 <body class="bg-gray-50">
     <div id="app"></div>
