--- a/financeiro-corrigido.html
+++ b/financeiro-corrigido.html
@@ -100,7 +100,8 @@
 </style>
 
 </head>
-<body class="bg-gray-50">
+<body style="background:#F4F8FF">
+
     <div id="app"></div>
     
     <button onclick="app.paginaAtual='dashboard';app.render();" 
