--- a/financeiro-corrigido.html
+++ b/financeiro-corrigido.html
@@ -357,7 +357,7 @@ class GestaoFinanceira {
 
     renderMenu(ativo) {
         const menus = [{id:'dashboard',label:'📊 Dashboard'},{id:'transacoes',label:'💰 Transações'},{id:'metas',label:'🎯 Metas'},{id:'alavancagem',label:'🚀 Alavancagem'},{id:'relatorios',label:'📈 Relatórios'}];
-        return `<div class="bg-white shadow-md border-b-4 border-cm-laranja sticky top-0 z-40"><div class="max-w-7xl mx-auto flex gap-2 px-4 py-3 overflow-x-auto">${menus.map(m => `<button onclick="app.paginaAtual='${m.id}';app.render();" class="px-6 py-3 rounded-lg font-bold whitespace-nowrap text-sm transition-all ${ativo === m.id ? 'bg-gradient-to-r from-cm-laranja to-cm-laranja-escuro text-white shadow-lg scale-105' : 'bg-cm-bege text-cm-verde-escuro hover:bg-cm-laranja hover:text-white'}">${m.label}</button>`).join('')}</div></div>`;
+        return `<div class="bg-cm-azul-claro shadow-md border-b-4 border-cm-laranja sticky top-0 z-40"><div class="max-w-7xl mx-auto flex gap-2 px-4 py-3 overflow-x-auto">${menus.map(m => `<button onclick="app.paginaAtual='${m.id}';app.render();" class="px-6 py-3 rounded-lg font-bold whitespace-nowrap text-sm transition-all ${ativo === m.id ? 'bg-gradient-to-r from-cm-laranja to-cm-laranja-escuro text-white shadow-lg scale-105' : 'bg-cm-bege text-cm-verde-escuro hover:bg-cm-laranja hover:text-white'}">${m.label}</button>`).join('')}</div></div>`;
     }
 
     renderDashboard() {
@@ -375,22 +375,22 @@ class GestaoFinanceira {
             <div class="max-w-7xl mx-auto px-4 py-8">
                 <div class="bg-gradient-to-br from-cm-verde-escuro via-cm-verde-claro to-cm-laranja text-white rounded-2xl shadow-2xl p-8 mb-8 border-4 border-white">
                     <div class="flex justify-between items-start mb-6">
-                        <div><div class="bg-white text-cm-verde-escuro px-4 py-2 rounded-lg inline-block mb-3"><span class="font-black text-xl">C&M</span></div>
+                        <div><div class="bg-cm-azul-claro text-cm-verde-escuro px-4 py-2 rounded-lg inline-block mb-3"><span class="font-black text-xl">C&M</span></div>
                         <h2 class="text-3xl font-bold mb-2">Resumo de Fevereiro 2026</h2><p class="text-sm opacity-90">Faltam ${diasRestantes} dias</p></div>
-                        <div class="text-right bg-white bg-opacity-20 rounded-xl p-4"><div class="text-sm opacity-90">Saldo do Mês</div>
+                        <div class="text-right bg-cm-azul-claro bg-opacity-20 rounded-xl p-4"><div class="text-sm opacity-90">Saldo do Mês</div>
                         <div class="text-4xl font-black">${resumo.saldo >= 0 ? '💰' : '⚠️'} R$ ${resumo.saldo.toLocaleString('pt-BR', {minimumFractionDigits: 2})}</div></div>
                     </div>
                     <div class="grid grid-cols-3 gap-4">
-                        <div class="bg-white bg-opacity-10 backdrop-blur-sm rounded-xl p-5 border-2 border-white border-opacity-30"><div class="text-sm opacity-90 mb-1">💰 Receitas</div><div class="text-3xl font-black">R$ ${resumo.receitas.toLocaleString('pt-BR')}</div></div>
-                        <div class="bg-white bg-opacity-10 backdrop-blur-sm rounded-xl p-5 border-2 border-white border-opacity-30"><div class="text-sm opacity-90 mb-1">💸 Despesas</div><div class="text-3xl font-black">R$ ${resumo.despesas.toLocaleString('pt-BR')}</div></div>
-                        <div class="bg-white bg-opacity-10 backdrop-blur-sm rounded-xl p-5 border-2 border-white border-opacity-30"><div class="text-sm opacity-90 mb-1">📈 Investimentos</div><div class="text-3xl font-black">R$ ${resumo.investimentos.toLocaleString('pt-BR')}</div></div>
+                        <div class="bg-cm-azul-claro bg-opacity-10 backdrop-blur-sm rounded-xl p-5 border-2 border-white border-opacity-30"><div class="text-sm opacity-90 mb-1">💰 Receitas</div><div class="text-3xl font-black">R$ ${resumo.receitas.toLocaleString('pt-BR')}</div></div>
+                        <div class="bg-cm-azul-claro bg-opacity-10 backdrop-blur-sm rounded-xl p-5 border-2 border-white border-opacity-30"><div class="text-sm opacity-90 mb-1">💸 Despesas</div><div class="text-3xl font-black">R$ ${resumo.despesas.toLocaleString('pt-BR')}</div></div>
+                        <div class="bg-cm-azul-claro bg-opacity-10 backdrop-blur-sm rounded-xl p-5 border-2 border-white border-opacity-30"><div class="text-sm opacity-90 mb-1">📈 Investimentos</div><div class="text-3xl font-black">R$ ${resumo.investimentos.toLocaleString('pt-BR')}</div></div>
                     </div>
                 </div>
                 <div class="grid grid-cols-1 md:grid-cols-4 gap-6 mb-8">
-                    <div class="bg-white rounded-xl shadow-lg p-6 border-l-4 border-cm-laranja hover:shadow-2xl transition-all"><div class="flex items-center justify-between"><div><div class="text-gray-600 text-sm mb-2 font-semibold">Taxa de Investimento</div><div class="text-4xl font-black text-cm-laranja">${resumo.taxaInvestimento}%</div><div class="text-xs text-gray-500 mt-1">Meta: 30%</div></div><div class="text-5xl">📊</div></div></div>
-                    <div class="bg-white rounded-xl shadow-lg p-6 border-l-4 border-cm-verde-escuro hover:shadow-2xl transition-all"><div class="flex items-center justify-between"><div><div class="text-gray-600 text-sm mb-2 font-semibold">Transações</div><div class="text-4xl font-black text-cm-verde-escuro">${resumo.total}</div><div class="text-xs text-gray-500 mt-1">Este mês</div></div><div class="text-5xl">💳</div></div></div>
-                    <div class="bg-white rounded-xl shadow-lg p-6 border-l-4 border-purple-500 hover:shadow-2xl transition-all"><div class="flex items-center justify-between"><div><div class="text-gray-600 text-sm mb-2 font-semibold">Metas Ativas</div><div class="text-4xl font-black text-purple-600">${metasAtivas.length}</div><div class="text-xs text-gray-500 mt-1">Em progresso</div></div><div class="text-5xl">🎯</div></div></div>
-                    <div class="bg-white rounded-xl shadow-lg p-6 border-l-4 ${this.calcularDividasAtrasadas().quantidade > 0 ? 'border-red-500' : 'border-green-500'} hover:shadow-2xl transition-all"><div class="flex items-center justify-between"><div><div class="text-gray-600 text-sm mb-2 font-semibold">${this.calcularDividasAtrasadas().quantidade > 0 ? 'Contas Atrasadas' : 'Contas em Dia'}</div><div class="text-4xl font-black ${this.calcularDividasAtrasadas().quantidade > 0 ? 'text-red-600' : 'text-green-600'}">${this.calcularDividasAtrasadas().quantidade > 0 ? this.calcularDividasAtrasadas().quantidade : '✓'}</div><div class="text-xs text-gray-500 mt-1">${this.calcularDividasAtrasadas().quantidade > 0 ? `R$ ${this.calcularDividasAtrasadas().valor.toLocaleString('pt-BR')}` : 'Tudo OK'}</div></div><div class="text-5xl">${this.calcularDividasAtrasadas().quantidade > 0 ? '⚠️' : '✅'}</div></div></div>
+                    <div class="bg-cm-azul-claro rounded-xl shadow-lg p-6 border-l-4 border-cm-laranja hover:shadow-2xl transition-all"><div class="flex items-center justify-between"><div><div class="text-gray-600 text-sm mb-2 font-semibold">Taxa de Investimento</div><div class="text-4xl font-black text-cm-laranja">${resumo.taxaInvestimento}%</div><div class="text-xs text-gray-500 mt-1">Meta: 30%</div></div><div class="text-5xl">📊</div></div></div>
+                    <div class="bg-cm-azul-claro rounded-xl shadow-lg p-6 border-l-4 border-cm-verde-escuro hover:shadow-2xl transition-all"><div class="flex items-center justify-between"><div><div class="text-gray-600 text-sm mb-2 font-semibold">Transações</div><div class="text-4xl font-black text-cm-verde-escuro">${resumo.total}</div><div class="text-xs text-gray-500 mt-1">Este mês</div></div><div class="text-5xl">💳</div></div></div>
+                    <div class="bg-cm-azul-claro rounded-xl shadow-lg p-6 border-l-4 border-purple-500 hover:shadow-2xl transition-all"><div class="flex items-center justify-between"><div><div class="text-gray-600 text-sm mb-2 font-semibold">Metas Ativas</div><div class="text-4xl font-black text-purple-600">${metasAtivas.length}</div><div class="text-xs text-gray-500 mt-1">Em progresso</div></div><div class="text-5xl">🎯</div></div></div>
+                    <div class="bg-cm-azul-claro rounded-xl shadow-lg p-6 border-l-4 ${this.calcularDividasAtrasadas().quantidade > 0 ? 'border-red-500' : 'border-green-500'} hover:shadow-2xl transition-all"><div class="flex items-center justify-between"><div><div class="text-gray-600 text-sm mb-2 font-semibold">${this.calcularDividasAtrasadas().quantidade > 0 ? 'Contas Atrasadas' : 'Contas em Dia'}</div><div class="text-4xl font-black ${this.calcularDividasAtrasadas().quantidade > 0 ? 'text-red-600' : 'text-green-600'}">${this.calcularDividasAtrasadas().quantidade > 0 ? this.calcularDividasAtrasadas().quantidade : '✓'}</div><div class="text-xs text-gray-500 mt-1">${this.calcularDividasAtrasadas().quantidade > 0 ? `R$ ${this.calcularDividasAtrasadas().valor.toLocaleString('pt-BR')}` : 'Tudo OK'}</div></div><div class="text-5xl">${this.calcularDividasAtrasadas().quantidade > 0 ? '⚠️' : '✅'}</div></div></div>
                 </div>
                 ${resumo.despesasPendentes > 0 ? `<div class="bg-red-50 border-l-4 border-red-500 rounded-xl shadow-lg p-6 mb-8"><div class="flex items-center gap-4"><div class="text-4xl">⚠️</div><div class="flex-1"><h3 class="text-xl font-bold text-red-800">Despesas Pendentes</h3><p class="text-red-700 mt-1">Você tem <strong>R$ ${resumo.despesasPendentes.toLocaleString('pt-BR', {minimumFractionDigits: 2})}</strong> em contas não pagas</p></div><button onclick="app.paginaAtual='transacoes';app.render();" class="bg-red-500 text-white px-6 py-3 rounded-lg font-bold">Ver Contas</button></div></div>` : ''}
                 <div class="grid grid-cols-1 md:grid-cols-3 gap-6 mb-8">
@@ -420,7 +420,7 @@ class GestaoFinanceira {
                     </div>
                 </div>
                 ${ultimas.length === 0 ? '<div class="bg-yellow-50 border-l-4 border-yellow-400 p-6 rounded-lg"><h3 class="text-lg font-bold text-yellow-800 mb-2">📝 Comece Agora!</h3><p>Registre sua primeira transação.</p></div>' : `
-                    <div class="bg-white rounded-2xl shadow-xl overflow-hidden border-t-4 border-cm-laranja">
+                    <div class="bg-cm-azul-claro rounded-2xl shadow-xl overflow-hidden border-t-4 border-cm-laranja">
                         <table class="w-full">
                             <thead class="bg-gradient-to-r from-cm-verde-escuro to-cm-verde-claro text-white">
                                 <tr><th class="px-6 py-4 text-left font-bold">Data</th><th class="px-6 py-4 text-left font-bold">Descrição</th><th class="px-6 py-4 text-left font-bold">Categoria</th><th class="px-6 py-4 text-right font-bold">Valor</th><th class="px-6 py-4 text-center font-bold">Ações</th></tr>
@@ -469,7 +469,7 @@ class GestaoFinanceira {
                     const progresso = (meta.valorAtual / meta.valorTotal * 100).toFixed(1);
                     const diasPassados = Math.floor((new Date() - new Date(meta.dataInicio)) / (1000 * 60 * 60 * 24));
                     const diasRestantes = meta.prazo - diasPassados;
-                    return `<div class="bg-white rounded-2xl shadow-xl p-6 border-t-4 border-cm-laranja">
+                    return `<div class="bg-cm-azul-clarorounded-2xl shadow-xl p-6 border-t-4 border-cm-laranja">
                         <div class="flex justify-between mb-4"><div><h4 class="text-xl font-black text-cm-verde-escuro">${meta.objetivo}</h4></div><button onclick="app.excluirMeta(${meta.id})" class="text-red-500">🗑️</button></div>
                         <div class="mb-4"><div class="flex justify-between text-sm mb-2"><span>R$ ${meta.valorAtual.toLocaleString('pt-BR')} / R$ ${meta.valorTotal.toLocaleString('pt-BR')}</span><span class="font-bold">${progresso}%</span></div><div class="w-full bg-gray-200 rounded-full h-6"><div class="bg-gradient-to-r from-cm-laranja to-cm-verde-escuro h-6 rounded-full" style="width: ${Math.min(progresso, 100)}%"></div></div></div>
                         <div class="grid grid-cols-2 gap-4 mb-4"><div class="bg-cm-bege rounded-lg p-3 text-center border-2 border-cm-laranja"><div class="text-3xl font-black text-cm-laranja">${diasRestantes}</div><div class="text-xs">dias restantes</div></div><div class="bg-cm-bege rounded-lg p-3 text-center border-2 border-cm-laranja"><div class="text-2xl font-black text-cm-laranja">R$ ${meta.valorDiario.toFixed(2)}</div><div class="text-xs">por dia</div></div></div>
@@ -491,9 +491,9 @@ class GestaoFinanceira {
             <div class="max-w-7xl mx-auto px-4 py-8">
                 <div class="bg-gradient-to-r from-yellow-400 via-cm-laranja to-cm-laranja-escuro text-white rounded-2xl shadow-2xl p-8 mb-8 border-4 border-white">
                     <h2 class="text-3xl font-black mb-6">⚡ 7 Regras de Ouro</h2>
-                    <div class="grid grid-cols-1 md:grid-cols-2 gap-4">${TECNICAS_ALAVANCAGEM.regras_ouro.map(regra => `<div class="bg-white bg-opacity-20 rounded-xl p-5"><p class="font-bold text-lg">${regra}</p></div>`).join('')}</div>
+                    <div class="grid grid-cols-1 md:grid-cols-2 gap-4">${TECNICAS_ALAVANCAGEM.regras_ouro.map(regra => `<div class="bg-cm-azul-claro bg-opacity-20 rounded-xl p-5"><p class="font-bold text-lg">${regra}</p></div>`).join('')}</div>
                 </div>
-                <div class="bg-white rounded-2xl shadow-xl p-8 mb-8 border-t-4 border-cm-laranja">
+                <div class="bg-cm-azul-claro rounded-2xl shadow-xl p-8 mb-8 border-t-4 border-cm-laranja">
                     <h2 class="text-3xl font-black text-cm-verde-escuro mb-6">${TECNICAS_ALAVANCAGEM.curto_prazo.titulo}</h2>
                     <div class="space-y-6">${TECNICAS_ALAVANCAGEM.curto_prazo.tecnicas.map((t,i) => `<div class="border-2 border-cm-laranja rounded-xl p-6 bg-gradient-to-r from-white to-cm-bege">
                         <h3 class="text-2xl font-black text-cm-verde-escuro mb-4">💡 ${t.nome}</h3>
@@ -504,7 +504,7 @@ class GestaoFinanceira {
                         </div>
                     </div>`).join('')}</div>
                 </div>
-                <div class="bg-white rounded-2xl shadow-xl p-8 border-t-4 border-cm-verde-escuro">
+                <div class="bg-cm-azul-claro rounded-2xl shadow-xl p-8 border-t-4 border-cm-verde-escuro">
                     <h2 class="text-3xl font-black text-cm-verde-escuro mb-6">${TECNICAS_ALAVANCAGEM.medio_prazo.titulo}</h2>
                     <div class="space-y-6">${TECNICAS_ALAVANCAGEM.medio_prazo.tecnicas.map(t => `<div class="border-2 border-cm-verde-escuro rounded-xl p-6 bg-gradient-to-r from-white to-green-50">
                         <h3 class="text-2xl font-black text-cm-verde-escuro mb-4">💎 ${t.nome}</h3>
@@ -528,7 +528,7 @@ class GestaoFinanceira {
             </div>
             ${this.renderMenu('relatorios')}
             <div class="max-w-7xl mx-auto px-4 py-8">
-                <div class="bg-white rounded-2xl shadow-xl p-8 mb-8 border-t-4 border-cm-laranja">
+                <div class="bg-cm-azul-claro rounded-2xl shadow-xl p-8 mb-8 border-t-4 border-cm-laranja">
                     <h2 class="text-3xl font-black text-cm-verde-escuro mb-6">📊 Resumo Geral</h2>
                     <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
                         <div><h3 class="text-xl font-bold mb-4">💰 Fluxo de Caixa</h3><div class="space-y-3">
@@ -540,7 +540,7 @@ class GestaoFinanceira {
                         <div><h3 class="text-xl font-bold mb-4">📊 Top Categorias</h3><div class="space-y-2">${porCategoria.length > 0 ? porCategoria.map(([cat, dados], i) => `<div class="flex justify-between p-3 bg-cm-bege rounded-lg border-l-4 border-cm-laranja"><div class="flex items-center gap-3"><span class="bg-cm-laranja text-white font-black px-3 py-1 rounded-lg">${i+1}</span><span class="font-bold">${cat}</span></div><span class="font-black text-cm-laranja">R$ ${dados.total.toLocaleString('pt-BR')}</span></div>`).join('') : '<p class="text-center text-gray-500 py-8">Nenhuma transação</p>'}</div></div>
                     </div>
                 </div>
-                <div class="bg-white rounded-2xl shadow-xl p-8 mb-8 border-t-4 border-cm-verde-escuro">
+                <div class="bg-cm-azul-claro rounded-2xl shadow-xl p-8 mb-8 border-t-4 border-cm-verde-escuro">
                     <h2 class="text-3xl font-black text-cm-verde-escuro mb-6">📥 Exportar Dados</h2>
                     <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                         <button onclick="app.exportarCSV()" class="bg-gradient-to-br from-green-500 to-green-600 text-white p-8 rounded-2xl font-black text-xl shadow-xl transform hover:scale-105 transition-all border-4 border-white"><div class="text-6xl mb-3">📊</div><div>Exportar Planilha</div></button>
