--- a/financeiro-corrigido.html
+++ b/financeiro-corrigido.html
@@ -192,7 +192,7 @@ class GestaoFinanceira {
         }
     }
 
-    abrirModalMeta() {
+function abrirModalMeta() {
         document.getElementById('conteudoModalMeta').innerHTML = `
             <div class="space-y-4">
                 <div><label class="block text-sm font-semibold mb-2">🎯 Objetivo da Meta</label><input type="text" id="objetivoMeta" class="w-full px-4 py-2 rounded-lg cm-input" placeholder="Ex: Pagar dívida do cartão"></div>
