--- a/financeiro-corrigido.html
+++ b/financeiro-corrigido.html
@@ -463,7 +463,7 @@ function abrirModalMeta() {
             <div class="max-w-7xl mx-auto px-4 py-8">
                 <div class="flex justify-between items-center mb-6">
                     <h2 class="text-2xl font-black text-cm-verde-escuro">Suas Metas</h2>
-                    <button onclick="app.abrirModalMeta()" class="bg-gradient-to-r from-cm-laranja to-cm-laranja-escuro text-white px-6 py-3 rounded-lg font-black">➕ Nova Meta</button>
+                    <button onclick="abrirModalMeta()" class="bg-gradient-to-r from-cm-laranja to-cm-laranja-escuro text-white px-6 py-3 rounded-lg font-black">➕ Nova Meta</button>
                 </div>
                 ${ativas.length > 0 ? `<div class="mb-8"><h3 class="text-xl font-bold text-cm-laranja mb-4">🔥 Em Progresso</h3><div class="grid grid-cols-1 md:grid-cols-2 gap-6">${ativas.map(meta => {
                     const progresso = (meta.valorAtual / meta.valorTotal * 100).toFixed(1);
@@ -477,7 +477,7 @@ function abrirModalMeta() {
                     </div>`;
                 }).join('')}</div></div>` : ''}
                 ${concluidas.length > 0 ? `<div><h3 class="text-xl font-bold text-green-600 mb-4">✅ Concluídas</h3><div class="grid grid-cols-1 md:grid-cols-3 gap-4">${concluidas.map(meta => `<div class="bg-green-50 border-2 border-green-500 rounded-lg p-4"><h4 class="font-bold text-green-800">${meta.objetivo}</h4><p class="text-sm text-green-600 mt-2">R$ ${meta.valorTotal.toLocaleString('pt-BR')}</p></div>`).join('')}</div></div>` : ''}
-                ${ativas.length === 0 && concluidas.length === 0 ? '<div class="bg-yellow-50 border-l-4 border-yellow-400 p-8 rounded-lg"><h3 class="text-xl font-bold text-yellow-800 mb-2">🎯 Crie sua Primeira Meta!</h3><button onclick="app.abrirModalMeta()" class="bg-cm-laranja text-white px-6 py-3 rounded-lg font-bold mt-4">➕ Criar Meta</button></div>' : ''}
+                ${ativas.length === 0 && concluidas.length === 0 ? '<div class="bg-yellow-50 border-l-4 border-yellow-400 p-8 rounded-lg"><h3 class="text-xl font-bold text-yellow-800 mb-2">🎯 Crie sua Primeira Meta!</h3><button onclick="abrirModalMeta()" class="bg-cm-laranja text-white px-6 py-3 rounded-lg font-bold mt-4">➕ Criar Meta</button></div>' : ''}
             </div>
         </div>`;
     }
