--- a/financeiro-corrigido.html
+++ b/financeiro-corrigido.html
@@ -127,7 +127,7 @@
 </style>
 
 </head>
-<body style="background:#F4F8FF">
+<body class="bg-gray-50" style="margin:0; padding:0;">
 
     <div id="app"></div>
     
