Include Supabase and Megavision resources
Added Supabase and Megavision scripts and styles.

--- a/financeiro-corrigido.html
+++ b/financeiro-corrigido.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
+  
+    <!-- Supabase -->
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+<!-- Dados centrais MEGAVISION -->
+<script src="megavision-data.js"></script>
+<!-- CSS do ecossistema (opcional se já tem estilo próprio) -->
+<link rel="stylesheet" href="megavision-style.css" />
+
+
+
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>C&M Financial Pro - Gestão Financeira Inteligente</title>
