--- a/financeiro-corrigido.html
+++ b/financeiro-corrigido.html
@@ -666,7 +666,7 @@ async limparDados() {
 }
 
 const app = new GestaoFinanceira();
-    </script
+    </script>
       <footer class="mv-footer">
   <span>MEGAVISION ECOSYSTEM</span> © 2026 — Todos os direitos reservados
 </footer>
