--- a/financeiro-corrigido.html
+++ b/financeiro-corrigido.html
@@ -14,6 +14,153 @@
 
   <style>
     /* só CSS aqui, nada de HTML */
+    @import url('https://fonts.googleapis.com/css2?family=Syne:wght@400;600;700;800&family=DM+Sans:wght@400;500;600&display=swap');
+
+:root {
+  --mv-bg:        #0a0a0f;
+  --mv-surface:   #111118;
+  --mv-border:    #1e1e2e;
+  --mv-accent:    #7c3aed;
+  --mv-accent2:   #06b6d4;
+  --mv-gold:      #f59e0b;
+  --mv-text:      #e2e8f0;
+  --mv-muted:     #64748b;
+  --mv-success:   #10b981;
+  --mv-danger:    #ef4444;
+  --mv-radius:    12px;
+}
+
+body {
+  background: var(--mv-bg) !important;
+  color: var(--mv-text) !important;
+  font-family: 'DM Sans', sans-serif !important;
+}
+
+/* NAVBAR */
+.mv-nav {
+  position: sticky !important; top: 0 !important; z-index: 100 !important;
+  background: rgba(10,10,15,0.95) !important;
+  backdrop-filter: blur(16px) !important;
+  border-bottom: 1px solid var(--mv-border) !important;
+  padding: 0 28px !important;
+  display: flex !important; align-items: center !important;
+  justify-content: space-between !important;
+  height: 60px !important;
+}
+.mv-nav-logo {
+  font-family: 'Syne', sans-serif !important;
+  font-weight: 800 !important; font-size: 18px !important;
+  background: linear-gradient(135deg, var(--mv-accent), var(--mv-accent2)) !important;
+  -webkit-background-clip: text !important;
+  -webkit-text-fill-color: transparent !important;
+  text-decoration: none !important; letter-spacing: 1px !important;
+}
+.mv-nav-links { display: flex !important; gap: 6px !important; align-items: center !important; }
+.mv-nav-links a {
+  color: var(--mv-muted) !important; text-decoration: none !important;
+  font-size: 13px !important; font-weight: 500 !important;
+  padding: 6px 14px !important; border-radius: 8px !important; transition: all .2s !important;
+}
+.mv-nav-links a:hover { color: var(--mv-text) !important; background: var(--mv-border) !important; }
+.mv-nav-status { display: flex !important; align-items: center !important; gap: 8px !important; font-size: 12px !important; color: var(--mv-muted) !important; }
+.mv-dot { width: 8px !important; height: 8px !important; border-radius: 50% !important; background: var(--mv-success) !important; animation: pulse 2s infinite !important; }
+.mv-dot.offline { background: var(--mv-danger) !important; animation: none !important; }
+
+@keyframes pulse { 0%,100%{opacity:1} 50%{opacity:.4} }
+
+/* APP CONTAINER */
+#app {
+  max-width: 1280px !important;
+  margin: 0 auto !important;
+  padding: 32px 28px 60px !important;
+}
+
+/* CARDS — o render() do financeiro gera divs, vamos estilizar globalmente */
+#app > div, #app section, #app .card {
+  background: var(--mv-surface) !important;
+  border: 1px solid var(--mv-border) !important;
+  border-radius: var(--mv-radius) !important;
+  color: var(--mv-text) !important;
+}
+
+/* TEXTOS */
+#app h1, #app h2, #app h3, #app h4 {
+  font-family: 'Syne', sans-serif !important;
+  color: var(--mv-text) !important;
+}
+#app p, #app span, #app label {
+  color: var(--mv-text) !important;
+}
+
+/* INPUTS */
+#app input, #app select, #app textarea {
+  background: var(--mv-bg) !important;
+  border: 1px solid var(--mv-border) !important;
+  border-radius: 8px !important;
+  color: var(--mv-text) !important;
+  padding: 10px 14px !important;
+  outline: none !important;
+}
+#app input:focus, #app select:focus {
+  border-color: var(--mv-accent) !important;
+}
+
+/* BOTÕES */
+#app button {
+  border-radius: 8px !important;
+  font-weight: 600 !important;
+  cursor: pointer !important;
+  transition: all .2s !important;
+}
+
+/* TABELAS */
+#app table { width: 100% !important; border-collapse: collapse !important; }
+#app th {
+  background: var(--mv-border) !important;
+  color: var(--mv-muted) !important;
+  font-size: 11px !important; text-transform: uppercase !important;
+  padding: 12px 16px !important; text-align: left !important;
+}
+#app td {
+  padding: 12px 16px !important;
+  border-bottom: 1px solid var(--mv-border) !important;
+  color: var(--mv-text) !important;
+}
+#app tr:hover td { background: rgba(124,58,237,.06) !important; }
+
+/* MODAL */
+.modal {
+  display: none !important; position: fixed !important; inset: 0 !important;
+  background: rgba(0,0,0,.75) !important; z-index: 200 !important;
+  align-items: center !important; justify-content: center !important;
+}
+.modal.ativo { display: flex !important; }
+.modal-content {
+  background: var(--mv-surface) !important;
+  border: 1px solid var(--mv-border) !important;
+  border-radius: var(--mv-radius) !important;
+  width: 90% !important; max-width: 560px !important;
+  max-height: 90vh !important; overflow-y: auto !important;
+}
+
+/* FOOTER */
+.mv-footer {
+  text-align: center !important; padding: 24px !important;
+  border-top: 1px solid var(--mv-border) !important;
+  color: var(--mv-muted) !important; font-size: 12px !important;
+  background: var(--mv-bg) !important;
+}
+.mv-footer span {
+  background: linear-gradient(135deg, var(--mv-accent), var(--mv-accent2)) !important;
+  -webkit-background-clip: text !important;
+  -webkit-text-fill-color: transparent !important;
+  font-weight: 700 !important;
+}
+
+/* CORES TAILWIND que usam bg- customizadas — forçar tom escuro */
+[class*="bg-cm-"] { background: var(--mv-surface) !important; }
+[class*="text-cm-"] { color: var(--mv-text) !important; }
+[class*="border-cm-"] { border-color: var(--mv-border) !important; }
   </style>
 </head>
     <body>
