--- a/financeiro-corrigido.html
+++ b/financeiro-corrigido.html
@@ -460,7 +460,7 @@ async limparDados() {
 
   
     fecharModal(id) {
-        document.getElementById(id).classList.remove('active');
+        document.getElementById(id).classList.remove('ativo');
     }
 
     render() {
