Update pricing and email for planos configuration

--- a/planos.html
+++ b/planos.html
@@ -192,8 +192,8 @@
 <script>
   // ✏️ CONFIGURE AQUI OS VALORES E SUA CHAVE PIX
   const CONFIG_PLANOS = {
-    basico:  { nome: 'Básico',  valor: 'XX,XX', chave: 'SEU@EMAIL.COM' },
-    premium: { nome: 'Premium', valor: 'XX,XX', chave: 'SEU@EMAIL.COM' }
+    basico:  { nome: 'Básico',  valor: '9,99', chave: 'clebermiguel42@gmail.com' },
+    premium: { nome: 'Premium', valor: '29,99', chave: 'clebermiguel42@gmail.com' }
   };
 
   let planoSelecionado = null;
